fix new button alignment and date settings not being removed

--- a/main.css
+++ b/main.css
@@ -149,8 +149,7 @@ button:hover {
 #new {
     position: absolute;
     background-color: rgb(32, 118, 152);
-    width: 50px;
-    height: 50px;
+    padding: 5px;
     bottom: 10px;
     right: 10px;
     border-radius: 50%;
