--- a/modal.css
+++ b/modal.css
@@ -8,7 +8,7 @@
     top: 0;
     width: 100%;
     font-weight: bold;
-    color: whitesmoke;
+    color: rgb(32, 118, 152);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: 100%;
     overflow: auto;
